--- a/chezmoi-daemon/systemd/chezmoi-daemon.service
+++ b/chezmoi-daemon/systemd/chezmoi-daemon.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Chezmoi Change Check (One-shot)
+Description=Chezmoi Change Detection Daemon
 After=graphical-session.target
 
 [Service]
 Type=oneshot
 ExecStart={{ .chezmoi.homeDir }}/scripts/chezmoi-daemon.sh check
-Environment=DISPLAY=:0
-Environment=WAYLAND_DISPLAY=wayland-0
+Environment=HOME={{ .chezmoi.homeDir }}
+Environment=USER={{ .chezmoi.username }}
 
 [Install]
 WantedBy=default.target
