Update .config/vivaldi-flags.conf Update .local/share/applications/mimeinfo.cache Update .tmux.conf

--- a/dot_config/vivaldi-flags.conf
+++ b/dot_config/vivaldi-flags.conf
@@ -1,4 +1,4 @@
---enable-features=UseOzonePlatform,WaylandWindowDecorations
+--enable-features=UseOzonePlatform,WaylandWindowDecorations,WebUIDarkMode
 --ozone-platform-hint=auto
 --enable-wayland-ime
 --disable-features=WaylandFractionalScaleV1
