--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -8,29 +8,29 @@ set -as terminal-features ",*:hyperlinks"
 
 # Generated Material You theme for tmux
 # Normal mode: Green status bar background
-set -g status-style "bg=#32cd32,fg=#000000"
-set -g status-left-style "bg=#32cd32,fg=#000000"
-set -g status-right-style "bg=#32cd32,fg=#000000"
+set -g status-style "bg=#228b22,fg=#ffffff"
+set -g status-left-style "bg=#228b22,fg=#ffffff"
+set -g status-right-style "bg=#228b22,fg=#ffffff"
 
 # Window status styling with green background
-set -g window-status-style "bg=#32cd32,fg=#000000"
-set -g window-status-current-style "bg=#aac7ff,fg=#09305f"
-set -g window-status-activity-style "bg=#8e9099,fg=#e2e2e9"
+set -g window-status-style "bg=#228b22,fg=#ffffff"
+set -g window-status-current-style "bg=#405f91,fg=#ffffff"
+set -g window-status-activity-style "bg=#74777f,fg=#191c20"
 
 # Status bar content with full green background
-set -g status-left "#[bg=#32cd32,fg=#000000,bold] Session: #S "
-set -g status-right "#[bg=#32cd32,fg=#000000,bold] %H:%M %d-%b "
+set -g status-left "#[bg=#228b22,fg=#ffffff,bold] Session: #S "
+set -g status-right "#[bg=#228b22,fg=#ffffff,bold] %H:%M %d-%b "
 
 # Pane border colors  
-set -g pane-border-style "fg=#8e9099"
-set -g pane-active-border-style "fg=#aac7ff"
+set -g pane-border-style "fg=#74777f"
+set -g pane-active-border-style "fg=#405f91"
 
 # Command mode colors (orange) - this affects the command prompt
 set -g message-style "bg=#ff4500,fg=#ffffff,bold"
 set -g message-command-style "bg=#ff4500,fg=#ffffff,bold"
 
 # Copy mode styling
-set -g mode-style "bg=#aac7ff,fg=#09305f"
+set -g mode-style "bg=#405f91,fg=#ffffff"
 
 # Clock mode color
-set -g clock-mode-colour "#aac7ff"
+set -g clock-mode-colour "#405f91"
