Update .config/matugen/config.toml Update .config/matugen/templates/colors.css Update .config/nvim/init.lua Update .config/nvim/lazy-lock.json Update .config/nvim/lua/user/autocmds.lua Add .config/nvim/lua/user/bg.lua Update .config/nvim/lua/user/colorscheme.lua Update .config/waybar/config Update .config/waybar/style.css Update .config/wofi/style.css Update .tmux.conf Update .wezterm.lua Update scripts/lock_cmd Update scripts/hyprland-theme-toggle/theme-toggle-modular.sh Update scripts/hyprland-theme-toggle/modules/base.sh Update scripts/hyprland-theme-toggle/modules/hyprpanel.sh Add scripts/hyprland-theme-toggle/modules/nvim.sh Add scripts/hyprland-theme-toggle/modules/swaync.sh Update scripts/hyprland-theme-toggle/modules/tmux.sh Update scripts/hyprland-theme-toggle/modules/waybar.sh Update scripts/hyprland-theme-toggle/modules/wezterm.sh Add scripts/idle-inhibitor/README.md Add scripts/idle-inhibitor/idle-inhibitor-daemon.sh Add scripts/idle-inhibitor/toggle.sh Add scripts/idle-inhibitor/waybar-module.sh Add scripts/idle-inhibitor/modules/base.sh

--- a/dot_config/matugen/config.toml
+++ b/dot_config/matugen/config.toml
@@ -1,9 +1,5 @@
-# Matugen configuration
-# Centralized color generation for all applications
+[config]
 
-# Template configuration
 [templates.colors]
-# Input template
 input_path = "~/.config/matugen/templates/colors.css"
-# Output path - centralized location for all apps to import
 output_path = "~/.config/matugen/colors.css"
