--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -14,23 +14,23 @@ set -g status-right-style "bg=#228b22,fg=#ffffff"
 
 # Window status styling with green background
 set -g window-status-style "bg=#228b22,fg=#ffffff"
-set -g window-status-current-style "bg=#405f91,fg=#ffffff"
-set -g window-status-activity-style "bg=#74777f,fg=#191c20"
+set -g window-status-current-style "bg=#3a6931,fg=#ffffff"
+set -g window-status-activity-style "bg=#757685,fg=#1a1b23"
 
 # Status bar content with full green background
 set -g status-left "#[bg=#228b22,fg=#ffffff,bold] Session: #S "
 set -g status-right "#[bg=#228b22,fg=#ffffff,bold] %H:%M %d-%b "
 
 # Pane border colors  
-set -g pane-border-style "fg=#74777f"
-set -g pane-active-border-style "fg=#405f91"
+set -g pane-border-style "fg=#757685"
+set -g pane-active-border-style "fg=#3a6931"
 
 # Command mode colors (orange) - this affects the command prompt
 set -g message-style "bg=#ff4500,fg=#ffffff,bold"
 set -g message-command-style "bg=#ff4500,fg=#ffffff,bold"
 
 # Copy mode styling
-set -g mode-style "bg=#405f91,fg=#ffffff"
+set -g mode-style "bg=#3a6931,fg=#ffffff"
 
 # Clock mode color
-set -g clock-mode-colour "#405f91"
+set -g clock-mode-colour "#3a6931"
