Update .config/nvim/init.lua Update .tmux.conf Update .wezterm.lua

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -8,29 +8,29 @@ set -as terminal-features ",*:hyperlinks"
 
 # Generated Material You theme for tmux
 # Normal mode: Green status bar background
-set -g status-style "bg=#228b22,fg=#ffffff"
-set -g status-left-style "bg=#228b22,fg=#ffffff"
-set -g status-right-style "bg=#228b22,fg=#ffffff"
+set -g status-style "bg=#32cd32,fg=#000000"
+set -g status-left-style "bg=#32cd32,fg=#000000"
+set -g status-right-style "bg=#32cd32,fg=#000000"
 
 # Window status styling with green background
-set -g window-status-style "bg=#228b22,fg=#ffffff"
-set -g window-status-current-style "bg=#3a6931,fg=#ffffff"
-set -g window-status-activity-style "bg=#757685,fg=#1a1b23"
+set -g window-status-style "bg=#32cd32,fg=#000000"
+set -g window-status-current-style "bg=#9fd491,fg=#083906"
+set -g window-status-activity-style "bg=#8f909f,fg=#e3e1ec"
 
 # Status bar content with full green background
-set -g status-left "#[bg=#228b22,fg=#ffffff,bold] Session: #S "
-set -g status-right "#[bg=#228b22,fg=#ffffff,bold] %H:%M %d-%b "
+set -g status-left "#[bg=#32cd32,fg=#000000,bold] Session: #S "
+set -g status-right "#[bg=#32cd32,fg=#000000,bold] %H:%M %d-%b "
 
 # Pane border colors  
-set -g pane-border-style "fg=#757685"
-set -g pane-active-border-style "fg=#3a6931"
+set -g pane-border-style "fg=#8f909f"
+set -g pane-active-border-style "fg=#9fd491"
 
 # Command mode colors (orange) - this affects the command prompt
 set -g message-style "bg=#ff4500,fg=#ffffff,bold"
 set -g message-command-style "bg=#ff4500,fg=#ffffff,bold"
 
 # Copy mode styling
-set -g mode-style "bg=#3a6931,fg=#ffffff"
+set -g mode-style "bg=#9fd491,fg=#083906"
 
 # Clock mode color
-set -g clock-mode-colour "#3a6931"
+set -g clock-mode-colour "#9fd491"
