Update .config/swaync/config.json Update scripts/hyprland-theme-toggle/modules/swaync.sh

--- a/dot_config/swaync/config.json
+++ b/dot_config/swaync/config.json
@@ -25,6 +25,7 @@
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
+  "hide-on-click": true,
   "script-fail-notify": true,
   "scripts": {
     "example-script": {
