Update .config/hypr/configs/style.conf Update .tmux.conf

--- a/dot_config/hypr/configs/style.conf
+++ b/dot_config/hypr/configs/style.conf
@@ -26,9 +26,9 @@ dwindle {
 
 general {
   allow_tearing=false
-  border_size=2
-  col.active_border=rgb(cc7d4b)
-  col.inactive_border=rgb(ae97af)
+  border_size=4
+  col.active_border=rgb(ffb4ab)
+  col.inactive_border=rgb(8f909f)
   gaps_in=5
   gaps_out=5
   layout=dwindle
@@ -40,12 +40,12 @@ gestures {
 
 group {
   groupbar {
-    col.active=rgb(cc7d4b)
-    col.inactive=rgb(ae97af)
+    col.active=rgb(ffb4ab)
+    col.inactive=rgb(8f909f)
     text_color=rgb(ffdea3)
   }
-  col.border_active=rgb(cc7d4b)
-  col.border_inactive=rgb(ae97af)
+  col.border_active=rgb(ffb4ab)
+  col.border_inactive=rgb(8f909f)
   col.border_locked_active=rgb(a584bb)
 }
 
