--- a/dot_config/hypr/configs/style.conf
+++ b/dot_config/hypr/configs/style.conf
@@ -53,7 +53,7 @@ input {
   touchpad {
     natural_scroll=no
   }
-  kb_options = fkeys:basic_13-24
+  kb_options = fkeys:basic_13-24,caps:shift
   follow_mouse=1
   kb_layout=us
   kb_model=
