--- a/dot_config/matugen/config.toml
+++ b/dot_config/matugen/config.toml
@@ -3,3 +3,7 @@
 [templates.colors]
 input_path = "~/.config/matugen/templates/colors.css"
 output_path = "~/.config/matugen/colors.css"
+
+[templates.fish-colors]
+input_path = "~/.config/matugen/templates/fish-colors.fish"
+output_path = "~/.config/fish/conf.d/theme-colors.fish"
