Move screen recorder indicator to center, make reactive with red styling
- Move custom/screen-recorder from modules-right to modules-center
- Change interval from 'once' to 1 second for instant updates
- Add prominent red styling with pulsing animation when recording
- Indicator now updates immediately without needing waybar signals

--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -3,7 +3,7 @@
         "position": "top",
         "reload_style_on_change": true,
         "modules-left": ["hyprland/workspaces"],
-        "modules-center": ["custom/media"],
+        "modules-center": ["custom/screen-recorder", "custom/media"],
         "modules-right": [
             "group/expand",
             "bluetooth",
@@ -11,7 +11,6 @@
             "pulseaudio",
             "tray",
             "custom/updates",
-            "custom/screen-recorder",
             "custom/idle-inhibitor",
             "clock",
             "custom/notification",
@@ -186,7 +185,7 @@
         "custom/screen-recorder": {
             "format": "{}",
             "return-type": "json",
-            "interval": "once",
+            "interval": 1,
             "exec": "$HOME/scripts/screen-recorder/waybar-module.sh",
             "on-click": "$HOME/scripts/record",
             "signal": 10
