Switch screen recorder indicator from polling to signal-only updates
Change interval from 1 second polling to 'once' (signal-only).
Module now only updates when receiving SIGRTMIN+10 from record script.
No more unnecessary polling every second.

--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -185,7 +185,7 @@
         "custom/screen-recorder": {
             "format": "{}",
             "return-type": "json",
-            "interval": 1,
+            "interval": "once",
             "exec": "$HOME/scripts/screen-recorder/waybar-module.sh",
             "on-click": "$HOME/scripts/record",
             "signal": 10
