--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -3,5 +3,18 @@
 .config/matugen/colors-dark.css
 .config/matugen/colors-light.css
 
+# Generated theme files for applications
+.config/wezterm/wezterm-colors.lua
+.config/fish/conf.d/theme-colors.fish
+.config/tmux/tmux-theme.conf
+
+# KDE/Qt color schemes
+.local/share/color-schemes/MaterialYouDark.colors
+.local/share/color-schemes/MaterialYouLight.colors
+
+# Qt configuration (generated)
+.config/qt6ct/qt6ct.conf
+.config/qt5ct/qt5ct.conf
+
 # Cache files
 .cache/wallpaper.hash
