Update .chezmoiignore Add .system_manifest.json Update .config/gtk-4.0/gtk.css Update .config/hypr/configs/style.conf Update .config/hypr/hyprlock.conf Update .config/matugen/config.toml Update .config/gtk-3.0/gtk.css Update .config/wezterm/wezterm.lua Update .gitconfig Update .tmux.conf Update scripts/hyprland-theme-toggle/theme-toggle-modular.sh Update scripts/hyprland-theme-toggle/modules/base.sh Update scripts/hyprland-theme-toggle/modules/fish.sh Update scripts/hyprland-theme-toggle/modules/hyprland.sh Update scripts/hyprland-theme-toggle/modules/qt.sh Update scripts/hyprland-theme-toggle/modules/tmux.sh Update scripts/hyprland-theme-toggle/modules/waybar.sh Update scripts/hyprland-theme-toggle/modules/wezterm.sh Update scripts/hyprland-theme-toggle/modules/wofi.sh Update scripts/hyprland-theme-toggle/modules/hyprlock.sh Update scripts/hyprland-theme-toggle/modules/vscode-enhanced.sh

--- a/dot_config/hypr/configs/style.conf
+++ b/dot_config/hypr/configs/style.conf
@@ -1,3 +1,6 @@
+# Import lmtt-generated Material You color variables first
+source=~/.config/hypr/lmtt-colors.conf
+
 animations {
   bezier=myBezier, 0.05, 0.9, 0.1, 1.05
   animation=windows, 1, 7, myBezier
@@ -27,8 +30,8 @@ dwindle {
 general {
   allow_tearing=false
   border_size=4
-  col.active_border=rgb(ffb4ab)
-  col.inactive_border=rgb(8f909f)
+  col.active_border=$lmtt_active_border
+  col.inactive_border=$lmtt_inactive_border
   gaps_in=5
   gaps_out=5
   layout=dwindle
@@ -38,14 +41,15 @@ gestures {
 }
 
 group {
+  col.border_active=$lmtt_active_border
+  col.border_inactive=$lmtt_inactive_border
+  col.border_locked_active=rgb(a584bb)
+  
   groupbar {
-    col.active=rgb(ffb4ab)
-    col.inactive=rgb(8f909f)
+    col.active=$lmtt_active_border
+    col.inactive=$lmtt_inactive_border
     text_color=rgb(ffdea3)
   }
-  col.border_active=rgb(ffb4ab)
-  col.border_inactive=rgb(8f909f)
-  col.border_locked_active=rgb(a584bb)
 }
 
 input {
