--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -5,5 +5,5 @@ setw -g mode-keys vi
 # Enable terminal hyperlink support
 set -as terminal-features ",*:hyperlinks"
 
-# Load dynamic theme colors from theme switcher
-source-file -q ~/.config/tmux/tmux-theme.conf
+# Load dynamic theme colors from lmtt (Linux Matugen Theme Toggle)
+source-file -q ~/.config/tmux/lmtt-theme.conf
