Update .config/hypr/configs/binds.conf Update .config/hypr/configs/exec.conf Update .config/hypr/configs/style.conf

--- a/dot_config/hypr/configs/style.conf
+++ b/dot_config/hypr/configs/style.conf
@@ -75,3 +75,13 @@ misc {
   force_default_wallpaper=1
   focus_on_activate=true
 }
+
+cursor {
+  no_hardware_cursors=1
+  use_cpu_buffer=1
+  enable_hyprcursor=true
+}
+
+render {
+  direct_scanout=0
+}
