--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -1,6 +1,6 @@
 general {
   after_sleep_cmd=hyprctl dispatch dpms on && (systemctl --user is-active --quiet hyprpanel || systemctl --user start hyprpanel)
-  lock_cmd=lock_cmd
+  lock_cmd=hyprlock
 }
 
 listener {
