--- a/dot_config/vivaldi-flags.conf
+++ b/dot_config/vivaldi-flags.conf
@@ -1,3 +1,4 @@
---enable-features=UseOzonePlatform,WaylandWindowDecorations,WebUIDarkMode
---ozone-platform-hint=auto
---enable-wayland-ime
+# Force Vivaldi to use discrete GPU (RX 7600) instead of Phoenix iGPU
+--force-device-scale-factor=1
+--enable-features=VaapiVideoDecoder,VaapiVideoEncoder
+--disable-features=UseChromeOSDirectVideoDecoder
