fix: remove dead code and update documentation for registry-based installer system

--- a/software_installers/packages.toml
+++ b/software_installers/packages.toml
@@ -8,10 +8,20 @@
 # COMMON PACKAGES (All Machines - Personal & Work)
 # ============================================================================
 
+[common.build_tools]
+description = "Build tools and compilers"
+install_level = "system"
+priority = 1
+  [common.build_tools.fedora]
+  packages = ["make", "gcc", "gcc-c++", "automake", "autoconf", "pkg-config"]
+
+  [common.build_tools.arch]
+  packages = ["base-devel"]
+
 [common.core_utils]
 description = "Essential system utilities"
 install_level = "system"
-priority = 1
+priority = 2
   [common.core_utils.fedora]
   packages = ["vim", "curl", "git", "jq", "thunar", "solaar", "wireplumber", "NetworkManager", "go", "gcc-go", "keychain", "powerline-fonts", "fira-code-fonts", "piper", "headsetcontrol"]
   repos = ["copr:solopasha/hyprland"]
@@ -26,17 +36,18 @@ description = "Terminal emulators and shell tools"
 install_level = "system"
 priority = 2
   [common.terminal.fedora]
-  packages = ["foot", "tmux"]
+  packages = ["wezterm", "tmux", "fish"]
 
   [common.terminal.arch]
-  packages = ["foot", "tmux"]
+  packages = ["wezterm", "tmux", "fish"]
 
 [common.shell_tools]
 description = "Shell prompt and environment tools"
 install_level = "user"
 priority = 3
   [common.shell_tools.fedora]
-  packages = []
+  packages = ["cargo"]
+  cargo_packages = ["oh-my-posh"]
 
   [common.shell_tools.arch]
   aur_packages = ["oh-my-posh-bin"]
@@ -48,7 +59,7 @@ priority = 4
 depends_on = ["core_utils"]
   [common.node_tooling.fedora]
   packages = ["cargo"]
-  cargo_packages = ["fnm"]
+  cargo_packages = ["fnm", "bun"]
 
   [common.node_tooling.arch]
   aur_packages = ["fnm-bin", "bun-bin"]
@@ -59,9 +70,11 @@ install_level = "system"
 priority = 5
 depends_on = ["core_utils"]
   [common.hyprland.fedora]
-  packages = ["hyprcursor", "hyprcursor-devel", "hypridle", "hyprland", "hyprland-devel", "hyprland-protocols-devel", "hyprlang", "hyprlang-devel", "hyprlock", "hyprpicker", "hyprutils", "hyprutils-devel", "hyprwayland-scanner-devel", "xdg-desktop-portal-hyprland", "wofi", "waybar", "dunst", "pavucontrol", "swaybg"]
+  packages = ["hyprcursor", "hyprcursor-devel", "hypridle", "hyprland", "hyprland-devel", "hyprland-protocols-devel", "hyprlang", "hyprlang-devel", "hyprlock", "hyprpicker", "hyprutils", "hyprutils-devel", "hyprwayland-scanner-devel", "xdg-desktop-portal-hyprland", "wofi", "waybar", "dunst", "pavucontrol", "swaybg", "wl-clipboard", "grim", "slurp"]
   repos = ["copr:solopasha/hyprland", "copr:heus-sueh/packages"]
   repo_priorities = { "copr:heus-sueh/packages" = 200 }
+  cargo_packages = ["matugen"]
+  aur_packages = ["swaync", "swayosd"]
   min_version = "40"
 
   [common.hyprland.arch]
@@ -73,26 +86,26 @@ install_level = "system"
 priority = 6
 description = "Web browsers"
   [common.browsers.fedora]
-  packages = ["vivaldi-stable", "chromium"]
+  packages = ["vivaldi-stable"]
   default_browser = "vivaldi-stable.desktop"
-  
+  profiles = ["personal"]
+  extensions = ["bitwarden"]
+
   [common.browsers.arch]
   aur_packages = ["vivaldi"]
-  packages = ["chromium", "firefox"]
   default_browser = "vivaldi-stable.desktop"
+  profiles = ["personal"]
+  extensions = ["bitwarden"]
 
 [common.ide]
 install_level = "system"
 priority = 7
 description = "Integrated development environments"
   [common.ide.fedora]
-  packages = []
-  repos = ["https://packages.microsoft.com/yumrepos/vscode"]
-  repo_keys = ["https://packages.microsoft.com/keys/microsoft.asc"]
-  custom_packages = ["code"]
-  
+  packages = ["neovim"]
+
   [common.ide.arch]
-  aur_packages = ["visual-studio-code-bin"]
+  packages = ["neovim"]
 
 [common.git_tools]
 install_level = "user"
@@ -100,9 +113,19 @@ priority = 8
 description = "Git-based installations"
   [common.git_tools.fedora]
   packages = []
-  
+
   [common.git_tools.arch]
   packages = []
+
+[common.gimp]
+description = "Image editing and manipulation"
+install_level = "system"
+priority = 9
+  [common.gimp.fedora]
+  packages = ["gimp"]
+
+  [common.gimp.arch]
+  packages = ["gimp"]
 
 [common.python_dev]
 description = "Python development environment"
@@ -122,9 +145,19 @@ priority = 10
 optional = true
   [common.rust_dev.fedora]
   packages = []
-  
+
   [common.rust_dev.arch]
   packages = []
+
+[common.nix]
+description = "Nix package manager"
+install_level = "system"
+priority = 11
+  [common.nix.fedora]
+  packages = ["nix"]
+
+  [common.nix.arch]
+  packages = ["nix"]
 
 # ============================================================================
 # WORK-ONLY PACKAGES
@@ -181,45 +214,10 @@ install_level = "user"
 priority = 14
 optional = true
   [work.vpn_tools.fedora]
-  packages = []
-  
+  flatpak = ["com.pritunl.Pritunl"]
+
   [work.vpn_tools.arch]
   aur_packages = ["pritunl-client-electron"]
-
-[work.kubernetes]
-description = "Kubernetes tools and management"
-install_level = "system"
-priority = 15
-optional = true
-  [work.kubernetes.fedora]
-  packages = ["kubernetes-client"]
-  
-  [work.kubernetes.arch]
-  packages = ["kubectl", "helm"]
-  aur_packages = ["k9s", "kubectx"]
-
-[work.java_dev]
-description = "Java development kit and tools"
-install_level = "system"
-priority = 16
-optional = true
-  [work.java_dev.fedora]
-  packages = ["java-21-openjdk", "java-21-openjdk-devel", "maven", "gradle"]
-  
-  [work.java_dev.arch]
-  packages = ["jdk21-openjdk", "maven", "gradle"]
-
-[work.pycharm]
-description = "PyCharm IDE"
-install_level = "system"
-priority = 17
-optional = true
-  [work.pycharm.fedora]
-  repos = ["copr:phracek/PyCharm"]
-  packages = ["pycharm-community"]
-  
-  [work.pycharm.arch]
-  aur_packages = ["pycharm-community-edition"]
 
 [work.slack]
 description = "Team communication"
@@ -238,8 +236,8 @@ install_level = "system"
 priority = 19
 optional = true
   [work.zoom.fedora]
-  packages = []
-  
+  flatpak = ["us.zoom.Zoom"]
+
   [work.zoom.arch]
   aur_packages = ["zoom"]
 
@@ -250,9 +248,21 @@ priority = 20
 optional = true
   [work.postman.fedora]
   flatpak = ["com.getpostman.Postman"]
-  
+
   [work.postman.arch]
   aur_packages = ["postman-bin"]
+
+[work.browsers]
+description = "Work browser profile configuration"
+install_level = "system"
+priority = 21
+  [work.browsers.fedora]
+  profiles = ["work", "personal"]
+  extensions = ["bitwarden"]
+
+  [work.browsers.arch]
+  profiles = ["work", "personal"]
+  extensions = ["bitwarden"]
 
 # ============================================================================
 # PERSONAL-ONLY PACKAGES
@@ -274,21 +284,10 @@ install_level = "system"
 priority = 22
 description = "Audio/video editing and creation"
   [personal.media_creation.fedora]
-  packages = ["kdenlive", "audacity", "gimp", "inkscape", "blender", "obs-studio"]
-  
-  [personal.media_creation.arch]
-  packages = ["kdenlive", "audacity", "gimp", "inkscape", "blender", "obs-studio"]
+  packages = ["kdenlive", "audacity", "inkscape", "blender", "obs-studio"]
 
-[personal.music]
-install_level = "user"
-priority = 23
-description = "Music players and streaming"
-  [personal.music.fedora]
-  packages = []
-  flatpak = ["com.spotify.Client"]
-  
-  [personal.music.arch]
-  aur_packages = ["spotify", "spicetify-cli"]
+  [personal.media_creation.arch]
+  packages = ["kdenlive", "audacity", "inkscape", "blender", "obs-studio"]
 
 [personal.social]
 install_level = "user"
@@ -296,41 +295,19 @@ priority = 24
 description = "Communication and social apps"
   [personal.social.fedora]
   packages = []
-  flatpak = ["com.discordapp.Discord", "org.telegram.desktop"]
-  
+  flatpak = ["com.discordapp.Discord"]
+
   [personal.social.arch]
-  packages = ["telegram-desktop"]
   aur_packages = ["discord"]
 
-[personal.password_manager]
-install_level = "user"
-priority = 25
-description = "Personal password management"
-  [personal.password_manager.fedora]
-  flatpak = ["org.keepassxc.KeePassXC"]
-  
-  [personal.password_manager.arch]
-  packages = ["keepassxc"]
-
-[personal.torrents]
-description = "Torrent client"
-install_level = "system"
-priority = 26
-optional = true
-  [personal.torrents.fedora]
-  packages = ["transmission"]
-  
-  [personal.torrents.arch]
-  packages = ["transmission-gtk"]
 
 [personal.emulators]
-description = "Game console emulators"
+description = "PS2 game emulation"
 install_level = "user"
 priority = 27
 optional = true
   [personal.emulators.fedora]
-  flatpak = ["org.DolphinEmu.dolphin-emu", "net.rpcs3.RPCS3"]
-  
+  flatpak = ["net.pcsx2.PCSX2"]
+
   [personal.emulators.arch]
-  packages = ["dolphin-emu"]
-  aur_packages = ["rpcs3-bin"]
+  packages = ["pcsx2"]
