--- a/tests/Dockerfile.arch
+++ b/tests/Dockerfile.arch
@@ -8,6 +8,9 @@ RUN pacman -Syu --noconfirm && \
     curl \
     sudo \
     base-devel \
+    fontconfig \
+    jq \
+    procps-ng \
     && pacman -Scc --noconfirm
 
 # Create test user
@@ -16,6 +19,9 @@ RUN useradd -m -s /bin/bash test_user && \
 
 # Set hostname for personal profile
 RUN echo "mason-personal-test" > /etc/hostname
+
+# Set up Wayland environment for headless Hyprland testing (as root)
+RUN mkdir -p /run/user/1000 && chown test_user:test_user /run/user/1000
 
 # Switch to test user
 USER test_user
@@ -45,6 +51,9 @@ COPY --chown=test_user:test_user . /home/test_user/.local/share/chezmoi/
 
 # Set chezmoi source directory
 ENV CHEZMOI_SOURCE_DIR=/home/test_user/.local/share/chezmoi
+
+# Set up Wayland environment for headless Hyprland testing
+ENV XDG_RUNTIME_DIR=/run/user/1000
 
 WORKDIR /home/test_user
 
