--- a/.system_manifest.json
+++ b/.system_manifest.json
@@ -14,7 +14,19 @@
       ],
       "last_seen": "2025-11-08T00:38:12Z",
       "first_seen": "2025-10-22T19:13:52Z"
+    },
+    "mason-desktop": {
+      "os": "linux",
+      "distro": "arch",
+      "version": "rolling",
+      "arch": "amd64",
+      "profile": "personal",
+      "optional_packages": [
+        "python_dev"
+      ],
+      "last_seen": "2025-11-11T16:39:33Z",
+      "first_seen": "2025-11-11T16:39:33Z"
     }
   },
-  "last_updated": "2025-11-08T00:38:12Z"
+  "last_updated": "2025-11-11T16:39:33Z"
 }
