Update .config/fish/config.fish Update .config/hypr/configs/style.conf

--- a/dot_config/hypr/configs/style.conf
+++ b/dot_config/hypr/configs/style.conf
@@ -30,7 +30,7 @@ dwindle {
 general {
   allow_tearing=false
   border_size=4
-  col.active_border=$lmtt_active_border
+  col.active_border=$lmtt_primary
   col.inactive_border=$lmtt_inactive_border
   gaps_in=5
   gaps_out=5
