Update .chezmoiscripts/50-reload-shell.sh Update .config/hypr/configs/binds.conf Update .config/hypr/configs/monitors.sh Remove .config/slack-flags.conf Update .config/systemd/user/waybar-reload.service Update .config/vivaldi-flags.conf Update .config/waybar/config Update .config/waybar/style.css Add .local/share/applications/slack.desktop Update 90-post-install.sh Remove packages-updated.sh Remove scripts/source-theme-env.sh Remove scripts/hyprland-theme-toggle/CLAUDE.md Remove scripts/hyprland-theme-toggle/README.md Remove scripts/hyprland-theme-toggle/.claude/settings.local.json Remove scripts/hyprland-theme-toggle/generate-theme-configs.py Remove scripts/hyprland-theme-toggle/install.sh Remove scripts/hyprland-theme-toggle/restore-theme.sh Remove scripts/hyprland-theme-toggle/theme-restore.sh Remove scripts/hyprland-theme-toggle/theme-toggle-modular.sh Remove scripts/hyprland-theme-toggle/modules/electron.sh Remove scripts/hyprland-theme-toggle/modules/base.sh Remove scripts/hyprland-theme-toggle/modules/claude.sh Remove scripts/hyprland-theme-toggle/modules/fish.sh Remove scripts/hyprland-theme-toggle/modules/gtk.sh Remove scripts/hyprland-theme-toggle/modules/hyprland.sh Remove scripts/hyprland-theme-toggle/modules/hyprpanel.sh Remove scripts/hyprland-theme-toggle/modules/nvim.sh Remove scripts/hyprland-theme-toggle/modules/qt.sh Remove scripts/hyprland-theme-toggle/modules/swaync.sh Remove scripts/hyprland-theme-toggle/modules/tmux.sh Remove scripts/hyprland-theme-toggle/modules/vscode.sh Remove scripts/hyprland-theme-toggle/modules/waybar.sh Remove scripts/hyprland-theme-toggle/modules/wezterm.sh Remove scripts/hyprland-theme-toggle/modules/wofi.sh Remove scripts/hyprland-theme-toggle/modules/xdg.sh Remove scripts/hyprland-theme-toggle/modules/hyprlock.sh Remove scripts/hyprland-theme-toggle/modules/vscode-enhanced.sh Remove scripts/hyprland-theme-toggle/templates/wezterm.lua Remove scripts/hyprland-theme-toggle/templates/wofi.css Remove software_installers/

--- a/dot_config/vivaldi-flags.conf
+++ b/dot_config/vivaldi-flags.conf
@@ -1,4 +1,6 @@
 # Force Vivaldi to use discrete GPU (RX 7600) instead of Phoenix iGPU
---force-device-scale-factor=1
---enable-features=VaapiVideoDecoder,VaapiVideoEncoder
+--enable-features=VaapiVideoDecoder,VaapiVideoEncoder,WaylandFractionalScaleV1
 --disable-features=UseChromeOSDirectVideoDecoder
+--disable-font-subpixel-positioning
+--disable-gpu-vsync
+--disable-accelerated-2d-canvas
