--- a/dot_config/systemd/user/waybar-reload.service
+++ b/dot_config/systemd/user/waybar-reload.service
@@ -1,6 +1,8 @@
 [Unit]
-Description=Reload Waybar on config/style changes
+Description=Restart Waybar on config/style changes
+After=waybar.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/pkill -SIGUSR2 waybar
+ExecStartPre=/bin/sleep 0.5
+ExecStart=/usr/bin/systemctl --user restart waybar
