--- a/dot_config/zed/private_settings.json
+++ b/dot_config/zed/private_settings.json
@@ -7,13 +7,12 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "icon_theme": "Catppuccin Mocha",
-  "telemetry": {
-    "diagnostics": true,
-    "metrics": true
+  "git_panel": {
+    "sort_by_path": true
   },
+  "icon_theme": "Material Icon Theme",
   "agent": {
-    "use_modifier_to_send": true,
+    "always_allow_tool_actions": true,
     "default_model": {
       "provider": "anthropic",
       "model": "claude-sonnet-4-5-latest"
@@ -21,15 +20,28 @@
     "model_parameters": []
   },
   "vim_mode": true,
+  "relative_line_numbers": "enabled",
+  "which_key": {
+    "enabled": true
+  },
   "ui_font_size": 16,
+  "ui_font_family": "Lilex",
   "buffer_font_size": 15,
+  "buffer_font_family": "Lilex Nerd Font",
+  "terminal": {
+    "font_family": "FiraCode Nerd Font"
+  },
   "theme": {
     "mode": "system",
     "light": "One Light",
-    "dark": "One Dark Pro"
+    "dark": "VSCode Dark Modern"
   },
-  "format_on_save": "off",
-  "file_types": {
-    "Hyprland Config": ["**/hypr/**/*.conf*"]
+  "languages": {
+    "TypeScript": {
+      "formatter": "language_server"
+    },
+    "JavaScript": {
+      "formatter": "language_server"
+    }
   }
 }
