fix: gnome-keyring auto-unlock + sync greetd configs
- Fix hardcoded UID in uwsm/env.tmpl (use chezmoi.uid template)
- Add gnome-keyring SSH component start to hypr exec.conf
- Sync greetd configs from /etc/greetd to chezmoi:
  - hypr.conf.tmpl: templated monitor config (is_work conditional)
  - mode-desktop.toml: regreet + LIBSEAT_BACKEND=seatd fix
  - regreet-launcher.sh: debug logging version
  - focus-listener.sh: new file for monitor focus handling
  - Delete obsolete gtkgreet.css

--- a/greetd_config/config/mode-desktop.toml
+++ b/greetd_config/config/mode-desktop.toml
@@ -3,13 +3,10 @@
 vt = 1
 
 [default_session]
-# gtkgreet with GTK4 and custom CSS
-command = "gtkgreet -l -s /etc/greetd/gtkgreet.css"
+# regreet - GTK4 greeter running under Hyprland compositor
+# Hyprland config: /etc/greetd/hypr.conf
+# regreet config: /etc/greetd/regreet.toml
+command = "env LIBSEAT_BACKEND=seatd Hyprland --config /etc/greetd/hypr.conf"
 
 # The user to run the greeter as
 user = "greeter"
-
-[initial_session]
-# Uncomment to auto-login on first boot
-# command = "Hyprland"
-# user = "mason"
